fix library item with scrollbar

--- a/app/assets/stylesheets/promethee-edit/_move.sass
+++ b/app/assets/stylesheets/promethee-edit/_move.sass
@@ -220,7 +220,7 @@
                 background-color: #253742
                 color: white
                 height: 100px
-                margin: 0 10px 20px
+                margin: 0 9px 18px
                 max-width: 100px
                 min-width: 100px
                 padding: 10px 5px 0 5px
